<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/current_dir_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14sp"
            android:text="@string/dummy_text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:background="@color/textViewTint"
            android:gravity="start|center" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_upward_black_48dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@color/imgButtonTint"
            android:contentDescription="@string/up_btn_desc"
            android:onClick="goToParentDirectory" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/imgButtonTint"
            android:src="@drawable/ic_create_new_folder_black_48dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/mkdir_btn_desc"
            android:onClick="showCreateDirDialog" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/imgButtonTint"
            android:src="@drawable/ic_note_add_black_48dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/mkfile_btn_desc"
            android:onClick="showCreateFileDialog" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/file_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/app_folder"
            android:background="@color/buttonTint"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:onClick="goToAppFolder" />
    </LinearLayout>


</LinearLayout>